ggml/30/ee1bf3c5b8e59269c5550c44b6a8ff4677f3c5/ggml-2-x86-cpu/ctest_debug-make.log
+ make -j
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml-base.dir/ggml.c.o
[  3%] Building C object src/CMakeFiles/ggml-base.dir/ggml-alloc.c.o
[  4%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-opt.cpp.o
[  5%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-backend.cpp.o
[  6%] Building CXX object src/CMakeFiles/ggml-base.dir/ggml-threading.cpp.o
[  7%] Building C object src/CMakeFiles/ggml-base.dir/ggml-quants.c.o
[  8%] Linking CXX static library libcommon.a
[  8%] Built target common
[  9%] Linking CXX shared library libggml-base.so
[  9%] Built target ggml-base
[ 10%] Building C object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu.c.o
[ 12%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-aarch64.cpp.o
[ 12%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu.cpp.o
[ 13%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-hbm.cpp.o
[ 14%] Building C object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-quants.c.o
[ 15%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/ggml-cpu-traits.cpp.o
[ 16%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/amx/amx.cpp.o
[ 17%] Building CXX object src/CMakeFiles/ggml-cpu.dir/ggml-cpu/amx/mmq.cpp.o
[ 18%] Linking CXX shared library libggml-cpu.so
[ 18%] Built target ggml-cpu
[ 19%] Building CXX object src/CMakeFiles/ggml.dir/ggml-backend-reg.cpp.o
[ 20%] Linking CXX shared library libggml.so
[ 20%] Built target ggml
[ 21%] Building C object tests/CMakeFiles/test-vec1.dir/test-vec1.c.o
[ 22%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[ 23%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 24%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 25%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 26%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 27%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 28%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 30%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 30%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 31%] Linking C executable ../bin/test-vec0
[ 32%] Linking C executable ../bin/test-vec1
[ 33%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 34%] Building CXX object tests/CMakeFiles/test-conv-transpose-1d.dir/test-conv-transpose-1d.cpp.o
[ 35%] Building CXX object tests/CMakeFiles/test-pad-reflect-1d.dir/test-pad-reflect-1d.cpp.o
[ 36%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 37%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 37%] Built target test-vec0
[ 38%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 38%] Built target test-vec1
[ 39%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 40%] Linking C executable ../bin/test0
[ 41%] Linking C executable ../bin/test-conv-transpose
[ 42%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 43%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 44%] Building C object tests/CMakeFiles/test-cont.dir/test-cont.c.o
[ 45%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 46%] Linking C executable ../bin/test-mul-mat0
[ 47%] Linking CXX executable ../bin/test-arange
[ 48%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 49%] Linking C executable ../bin/test-pool
[ 50%] Building CXX object examples/mnist/CMakeFiles/mnist-common.dir/mnist-common.cpp.o
[ 51%] Building CXX object examples/sam/CMakeFiles/sam.dir/main.cpp.o
[ 52%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 53%] Linking C executable ../bin/test-rel-pos
[ 54%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolov3-tiny.cpp.o
[ 56%] Building CXX object examples/yolo/CMakeFiles/yolov3-tiny.dir/yolo-image.cpp.o
[ 55%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 57%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 58%] Linking C executable ../bin/test-dup
[ 58%] Built target test-conv-transpose
[ 58%] Built target test-mul-mat0
[ 59%] Linking C executable ../bin/test-cont
[ 59%] Built target test-pool
[ 60%] Linking CXX executable ../bin/test-pad-reflect-1d
[ 60%] Built target test0
[ 61%] Linking C executable ../bin/test-customop
[ 61%] Built target test-arange
[ 61%] Built target test-rel-pos
[ 61%] Built target test-cont
[ 61%] Built target test-dup
[ 61%] Built target test-pad-reflect-1d
[ 61%] Built target test-customop
[ 62%] Linking CXX executable ../bin/test-timestep_embedding
[ 63%] Linking C executable ../bin/test-mul-mat2
[ 63%] Built target test-timestep_embedding
[ 64%] Linking CXX executable ../bin/test-quantize-fns
[ 64%] Built target test-mul-mat2
[ 64%] Built target test-quantize-fns
[ 65%] Linking CXX executable ../bin/test-conv1d
[ 66%] Linking CXX executable ../../bin/simple-backend
[ 67%] Linking CXX executable ../../bin/simple-ctx
[ 67%] Built target test-conv1d
[ 68%] Linking CXX executable ../bin/test-mul-mat
[ 68%] Built target simple-backend
[ 68%] Built target simple-ctx
[ 69%] Linking CXX executable ../bin/test-conv-transpose-1d
[ 70%] Linking CXX executable ../bin/test-conv2d
[ 70%] Built target test-mul-mat
[ 71%] Linking CXX executable ../bin/test-opt
[ 71%] Built target test-conv-transpose-1d
[ 71%] Built target test-conv2d
[ 71%] Built target test-opt
[ 72%] Linking CXX static library libmnist-common.a
[ 73%] Linking CXX executable ../bin/test-quantize-perf
[ 73%] Built target mnist-common
[ 74%] Building CXX object examples/mnist/CMakeFiles/mnist-eval.dir/mnist-eval.cpp.o
[ 75%] Building CXX object examples/mnist/CMakeFiles/mnist-train.dir/mnist-train.cpp.o
[ 76%] Linking CXX executable ../../bin/yolov3-tiny
[ 76%] Built target test-quantize-perf
[ 76%] Built target yolov3-tiny
/home/ggml/work/ggml/examples/common-ggml.cpp: In function ‘bool ggml_common_quantize_0(std::ifstream&, std::ofstream&, ggml_ftype, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/ggml/work/ggml/examples/common-ggml.cpp:75:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_4_4’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   75 |         case GGML_FTYPE_MOSTLY_Q4_0_4_4:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:76:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_4_8’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   76 |         case GGML_FTYPE_MOSTLY_Q4_0_4_8:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:77:14: error: ‘GGML_FTYPE_MOSTLY_Q4_0_8_8’ was not declared in this scope; did you mean ‘GGML_FTYPE_MOSTLY_Q4_0’?
   77 |         case GGML_FTYPE_MOSTLY_Q4_0_8_8:
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |              GGML_FTYPE_MOSTLY_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:215:22: error: ‘GGML_TYPE_Q4_0_4_4’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  215 |                 case GGML_TYPE_Q4_0_4_4:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:216:22: error: ‘GGML_TYPE_Q4_0_4_8’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  216 |                 case GGML_TYPE_Q4_0_4_8:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:217:22: error: ‘GGML_TYPE_Q4_0_8_8’ was not declared in this scope; did you mean ‘GGML_TYPE_Q4_0’?
  217 |                 case GGML_TYPE_Q4_0_8_8:
      |                      ^~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_Q4_0
/home/ggml/work/ggml/examples/common-ggml.cpp:220:22: error: ‘GGML_TYPE_IQ4_NL_4_4’ was not declared in this scope; did you mean ‘GGML_TYPE_IQ4_NL’?
  220 |                 case GGML_TYPE_IQ4_NL_4_4:
      |                      ^~~~~~~~~~~~~~~~~~~~
      |                      GGML_TYPE_IQ4_NL
make[2]: *** [examples/CMakeFiles/common-ggml.dir/build.make:76: examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1065: examples/CMakeFiles/common-ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 77%] Linking CXX executable ../../bin/mnist-train
[ 78%] Linking CXX executable ../../bin/mnist-eval
[ 78%] Built target mnist-train
[ 79%] Linking CXX executable ../../bin/sam
[ 79%] Built target mnist-eval
[ 79%] Built target sam
[ 80%] Linking CXX executable ../bin/test-backend-ops
[ 80%] Built target test-backend-ops
make: *** [Makefile:146: all] Error 2

real	0m6.887s
user	0m29.550s
sys	0m3.242s
